add package eslint

--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start"
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "lint": "eslint src"
   },
   "dependencies": {
     "react": "15.2.1",
     "react-native": "^0.31.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.2.2",
+    "eslint-plugin-react": "^6.0.0",
+    "eslint-plugin-security": "^1.2.0"
   }
 }
