Changes to be committed: 	modified:   .eslintrc 	modified:   .gitignore 	modified:   package.json
 Add package:
	babel-eslint
	eslint-plugin-security
	pre-commit

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,5 +3,12 @@
     "react",
     "security"
   ],
-  "extends": ["eslint:recommended", "plugin:react/recommended"]
+  "extends": ["eslint:recommended", "plugin:react/recommended"],
+  "parserOptions": {
+    "ecmaFeatures": {
+        "jsx": true,
+        "modules": true
+    }
+  },
+  "parser": "babel-eslint"
 }
