--- a/package.json
+++ b/package.json
@@ -4,15 +4,22 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "lint": "eslint src"
+    "lint": "eslint index.ios.js index.android.js src",
+    "lint-pass": "echo '\\033[4;32m♡' Awsome!!! you are great to commit ♡' \\033[0m'"
   },
   "dependencies": {
     "react": "15.2.1",
     "react-native": "^0.31.0"
   },
   "devDependencies": {
+    "babel-eslint": "^6.1.2",
     "eslint": "^3.2.2",
     "eslint-plugin-react": "^6.0.0",
-    "eslint-plugin-security": "^1.2.0"
-  }
+    "eslint-plugin-security": "^1.2.0",
+    "pre-commit": "^1.1.3"
+  },
+  "pre-commit": [
+    "lint",
+    "lint-pass"
+  ]
 }
